# correlator-dbt

./: .codecov.yml  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  mypy.ini  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: pr-checks.yml  pr.yml  pypi-release.yml  testpypi.yml
docs/: ARCHITECTURE.md  CONFIGURATION.md  CONTRIBUTING.md  DEPLOYMENT.md  DEVELOPMENT.md  JAFFLE_SHOP_SETUP.md
src/dbt_correlator/: __init__.py  cli.py  config.py  emitter.py  parser.py
tests/: conftest.py  test_cli.py  test_config.py  test_emitter.py  test_integration.py  test_parser.py
tests/fixtures/: README.md  manifest.json  run_results.json
