# pyproject.toml for dbt-correlator
# Python package configuration using UV package manager

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "correlator-dbt"
version = "0.0.0"
description = "dbt plugin that emits OpenLineage events with test results for automated incident correlation"
readme = "README.md"
authors = [
    { name = "Emmanuel King Kasulani", email = "kasulani@gmail.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Topic :: System :: Monitoring",
]
keywords = [
    "dbt",
    "openlineage",
    "data-quality",
    "testing",
    "observability",
    "lineage",
    "correlation",
    "incident-management",
]
requires-python = ">=3.9"
dependencies = [
    "openlineage-python>=1.0.0",
    "click>=8.1.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.license]
text = "Apache-2.0"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "black>=23.0.0",
    "ruff>=0.8.0",
    "mypy>=1.9.0",
    "isort>=5.13.0",
    "pre-commit>=3.5.0",
    "bandit[toml]>=1.7.0",
    "types-click>=7.1.0",
]
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.0.0",
    "myst-parser>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/correlator-io/correlator-dbt"
Repository = "https://github.com/correlator-io/correlator-dbt"
Documentation = "https://github.com/correlator-io/correlator-dbt#readme"
"Bug Tracker" = "https://github.com/correlator-io/correlator-dbt/issues"
"Correlator" = "https://github.com/correlator-io/correlator"

[project.scripts]
dbt-correlator = "dbt_correlator.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/dbt_correlator"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
    "/LICENSE",
]

# Black code formatter configuration
[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311", "py312", "py313"]
include = "\\.pyi?$"
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | venv
  | tests/fixtures
)/
'''

# isort import sorting configuration
[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
src_paths = ["src", "tests"]

# Ruff linting configuration
[tool.ruff]
line-length = 88
target-version = "py39"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "PT",     # flake8-pytest-style
    "RET",    # flake8-return
    "PL",     # pylint
    "RUF",    # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by black)
    "PLR0913", # too many arguments
    "PLR2004", # magic value used in comparison
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",   # assert allowed in tests
    "ARG",    # unused arguments in fixtures
    "PLR2004", # magic values in tests
]

[tool.ruff.lint.pydocstyle]
convention = "google"

# Mypy type checking configuration
[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false  # Click decorators are untyped
no_implicit_optional = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "openlineage.*"
ignore_missing_imports = true

# Pytest configuration
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = [
    "--cov=dbt_correlator",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-branch",
    "--strict-markers",
    "-v",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests",
]

# Coverage configuration
# Based on best practices from https://github.com/kasulani/etracer/blob/main/.coveragerc
[tool.coverage.run]
source = ["src/dbt_correlator"]
branch = true
omit = [
    "*/tests/*",
    "*/site-packages/*",
    "*/__pycache__/*",
    "*/.venv/*",
    "*/interfaces.py",  # Interface/protocol definitions
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    # Skip abstract/interface method definitions
    "pass",
    "raise NotImplementedError",
    "@abstractmethod",
    "def __repr__",
    "def __str__",
    
    # Skip defensive code (pragmas, debug-only code)
    "pragma: no cover",
    "def __debug__",
    "if self\\.debug",
    
    # Skip unimplemented/abstract methods
    "raise AssertionError",
    
    # Skip branches that can't be covered easily
    "except ImportError",
    "except Exception as e:",
    "warn\\(",
    
    # Skip platform-specific code
    "if sys\\.platform ==",
    "if platform\\.",
    
    # Skip unreachable exit points
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.coverage.html]
directory = "htmlcov"

# Bandit security linting configuration
[tool.bandit]
exclude_dirs = ["tests", "docs"]
skips = ["B101"]  # Skip assert_used (we use asserts in tests)
